--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>EasyBank</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EasyBank</name>
-	<description>Demo project for Spring Boot and security</description>
+	<description>Securing Application</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
